[package]
name = "ccapi"
description = "A simple library to interact with the ControlConsole API for the PlayStation 3"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rmg-x/ccapi-rs"
repository = "https://github.com/rmg-x/ccapi-rs"
readme = "README.md"
rust-version="1.43.1"

[lib]
name = "ccapi"
path = "src/lib.rs"

[[bin]]
name = "ccapi"
path = "src/cli/main.rs"

[dependencies]
ureq = "2.4.0"
anyhow = "1.0"
thiserror = "1.0"
getopts = "0.2"